# pilikino

./: .gitignore  package-lock.json  package.json
circuits/: Nargo.toml
circuits/pilikino/: Scarb.toml
circuits/pilikino/src/: honk_verifier.cairo  honk_verifier_constants.cairo
circuits/pilikino/tests/: test_contract.cairo
circuits/src/: main.nr  merkle_tree.nr
contracts/: Scarb.toml
contracts/scripts/: generateCommitment.ts  generateHashChain.ts  generateProof.ts  merkleTree.ts  utils.ts
contracts/scripts/fixtures/: commitment_fixture.json  proof_calldata.txt  proof_metadata.json  withdraw_inputs.txt
contracts/src/: constants.cairo  demo.cairo  lib.cairo  pilikino_pool.cairo  pilikino_proxy.cairo  verifier.cairo
contracts/src/demo/: demo_dao.cairo  demo_defi.cairo  demo_token.cairo
contracts/src/verifier/: honk_verifier.cairo  honk_verifier_circuits.cairo  honk_verifier_constants.cairo
contracts/tests/: demo_dao_test.cairo  demo_defi_test.cairo  pilikino_pool_test.cairo
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: layout.tsx  page.tsx
frontend/components/: HeroSection.tsx  Navbar.tsx  WalletConnector.tsx  starknet-provider.tsx
frontend/lib/: demo-config.ts  pool-leaves.ts  starknet.ts
relayer/: .env.example  Cargo.toml
relayer/src/: api.rs  chain.rs  config.rs  errors.rs  main.rs  mempool.rs  models.rs  state.rs  worker.rs
sdk/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
sdk/scripts/: copy-assets.mjs
sdk/src/: index.ts
(+42 files in other folders)
